syntax = "proto3";

option csharp_namespace = "TikTok.Shared.Protos";
option go_package = "github.com/tiktok-clone/video-service/internal/delivery/grpc/proto;proto";

package common;

// Common message types
message Empty {}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

message PageRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
  OTHER = 3;
  PREFER_NOT_TO_SAY = 4;
}
